--- a/G2EGM first step.ipynb
+++ b/G2EGM first step.ipynb
@@ -312,6 +312,7 @@
     "        # lb, ub = bounding_box(𝕤, G) # find hypercube around simplex\n",
     "        # we *could* generate the points directly from indeces here instead of just the (lb, ub)\n",
     "        bi = BarycentricInterpolant(s, C[i])\n",
+    "        i += 1 # i is not used below, so we can update it now\n",
     "        for ig in range(len(CommonGrid)): # loop over all points, this is not the only way, we could look for points first\n",
     "            g = G[ig]\n",
     "            bi.UpdateWeights(g)  # get weights\n",
@@ -323,7 +324,6 @@
     "                if ValueAtg >= ValueAtPolicy[ig]:\n",
     "                    Policy[ig] = PolicyAtg\n",
     "                    ValueAtPolicy[ig] = ValueAtg         \n",
-    "        i += 1\n",
     "\n",
     "    return Policy, ValueAtPolicy"
    ]
